@startuml
'https://plantuml.com/class-diagram
@startuml
'___________STYLES___________
title UML - ecommerce
skinparam classAttributeIconSize 0
skinparam backgroundColor White
skinparam RoundCorner 10
skinparam Shadowing true

skinparam class {
    ArrowColor Black
    BackgroundColor White
    HeaderBackgroundColor Gray
    BorderColor Black
    FontColor White
    FontSize 14
    AttributeFontSize 12
}

skinparam object{
    ArrowColor Black
    BackgroundColor White
    BorderColor Black
    FontColor Black
    FontSize 14
    AttributeFontSize 12
}

skinparam note {
    BackgroundColor LightYellow
    BorderColor Black
}

'___________UML___________

interface ICompraService{
+procesarCompra(productoId: String, cantidad: Integer, tarjeta: Tarjeta, dirección: Dirección)
}

class CompraService{
- almacenService: AlmacenService
- pagoService: PagoService
- envíoService: EnvíoService
+CompraService(almacenService: AlmacenService, pagoService: PagoService, envíoService: EnvíoService)
+procesarCompra(productoId: String, cantidad: Integer, tarjeta: Tarjeta, dirección: Dirección)
}

class AlmacenService{
-productos: List<Producto>
+AlmacenService(List<Producto> producto)
+buscarProducto(productoId: String, cantidad: Integer): Producto
}

class PagoService{
+procesarPago(tarjeta: Tarjeta, montoACobrar: String): Boolean
}

class EnvíoService{
+procesarEnvío(p: List<Producto>, dirección: Dirección)
}

class Producto{
-productoId: String
-nombre: String
-cantidad: Integer
-valor: integer
+getProductoId(): String
+setProductoId()
+getNombre(): String
+setNombre()
+getCantidad(): Integer
+setCantidad()
+getValor(): Integer
+setValor()
+toString()
}

class Tarjeta{
-número: String
-CVV: String
-banco: String
+getNúmero(): String
+setNúmero()
+getCVV(): String
+setCVV()
+getBanco(): String
+setBanco()
+toString()
}

class Dirección{
-ciudad: String
-pais: String
-códigoPostal: String
-dirección: String
+getCiudad(): String
+setCiudad()
+getPais(): String
+setPais()
+getCódigoPostal(): String
+setCódigoPostal()
+getDirección(): String
+setDirección()
+toString(): String
}

object Cliente{
}

ICompraService <|.. CompraService
CompraService-->AlmacenService
CompraService-->PagoService
CompraService-->EnvíoService
Cliente .>ICompraService
CompraService.>Tarjeta
Dirección<.CompraService
EnvíoService.>Producto
Producto<.AlmacenService
Dirección<.EnvíoService
Tarjeta<.PagoService

@enduml